Repository - pt users + modele pt restul

--- a/Netrom/appsettings.json
+++ b/Netrom/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbConnectionString": "Server=localhost;Database=SmartWorkoutDb;User ID=sa;Password=SummerCamp11;Trusted_Connection=False;Encrypt=False;MultipleActiveResultSets=True;"
+  }
 }
