--- a/Netrom/Netrom.csproj
+++ b/Netrom/Netrom.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Blazorise.Bootstrap" Version="1.5.3" />
     <PackageReference Include="Blazorise.Components" Version="1.5.3" />
     <PackageReference Include="Blazorise.DataGrid" Version="1.5.3" />
+    <PackageReference Include="Blazorise.FluentValidation" Version="1.5.3" />
     <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.5.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0-preview.5.24306.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0-preview.5.24306.3" />
