--- a/Netrom/Netrom.csproj
+++ b/Netrom/Netrom.csproj
@@ -19,6 +19,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Syncfusion.Blazor" Version="26.1.40" />
   </ItemGroup>
 
 </Project>
